# curly-lang

./: .gitignore  Cargo.toml  README.md  TODO.md
examples/: design.curly  e.curly  eval.curly  primes.curly
include/: curly32.c  curly32.h  curly64.c  curly64.h
src/: backends.rs  frontend.rs  lib.rs  main.rs
src/backends/: c.rs  js.rs
src/backends/c/: codegen.rs
src/backends/js/: codegen.rs  common_funcs.rs  imports_exports.rs
src/frontend/: correctness.rs  ir.rs  parser.rs  scopes.rs  types.rs
tests/compile-tests/: Fib.java  ack.curly  assign.curly  char_word.curly  church.curly  closure.curly  cons.curly  cons_concat.curly  cons_cons.curly  cons_print.curly  cons_sum.curly  doubles.curly  enums.curly  even_odd.curly  fib.c  fib.curly  fib.hi  fib.hs  fib.py  fib.rs  floor.curly  func_type.curly  funcs.curly  globals.curly  infix.curly  module.curly  slowadd.curly  sqrt.curly  tail_map.curly  var_args.curly  walrus.curly  with.curly
tests/correctness-tests/: types.curly
tests/module-test/: division.c  funcs.curly  main  main.curly
tests/parsing-tests/: for.curly  func-apply.curly  if.curly  test.curly  values.txt  where.curly
vim/: README.md
vim/ftdetect/: curly.vim
vim/syntax/: curly.vim
