[package]
name = "curlyc"
version = "0.1.0"
authors = ["jenra"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.0"
libloading = "0.6"
logos = "0.11.4"
owo-colors = "1"
regex = "1"
rustyline = "7.1.0"
